// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users endpoint | GET /users when authenticated 1`] = `
Array [
  Object {
    "email": "all-permissions-and-state",
    "id": 2000,
    "name": null,
    "phone": null,
    "position": null,
    "role": "admin",
    "state": "mn",
  },
  Object {
    "email": "all-permissions-no-state",
    "id": 2001,
    "name": null,
    "phone": null,
    "position": null,
    "role": "admin",
    "state": null,
  },
  Object {
    "email": "no-permissions",
    "id": 2010,
    "name": null,
    "phone": null,
    "position": null,
    "role": null,
    "state": null,
  },
]
`;

exports[`users endpoint | GET /users/:userID when authenticated when requesting a non-existant user ID 1`] = `undefined`;

exports[`users endpoint | GET /users/:userID when authenticated when requesting a valid user ID 1`] = `
Object {
  "email": "all-permissions-and-state",
  "id": 2000,
  "name": null,
  "phone": null,
  "position": null,
  "role": "admin",
  "state": "mn",
}
`;
